[package]
name = "unreal-plugin-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
eframe = { version = "0.27", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
